@@ -1,3 +1,5 @@
+* Transfer configuration, profiles and plugins from previous version
+
 Version 6.4.6 - 2022-11-17
 --------------------------
 * Bug fixes (see mercurial logs for details)
